Set the position of the nav bar as fixed so that it is always visible when user scrolls

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,9 @@ nav {
     gap: 5px;
     background-color: #c5aa6a;
     height: 3em;
+    position: fixed;
+    z-index: 999;
+    width: 100%;
 }
 
 button {
